--- a/app/src/main/res/animator/slide.xml
+++ b/app/src/main/res/animator/slide.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <objectAnimator
-        android:propertyName="alpha"
-        android:valueTo="1"
-        android:valueFrom="0"
         android:duration="1000"
-
-        android:interpolator="@android:interpolator/accelerate_decelerate"
+        android:propertyName="translationX"
+        android:valueFrom="0"
+        android:valueTo="300"
+        android:repeatCount="2"
+        android:repeatMode="reverse"
         />
 </set>
