--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,8 +16,58 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Set"
-        android:onClick="test_set"
+        android:onClick="fadeIn"
         android:id="@+id/button"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="63dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fade"
+        android:onClick="fade"
+        android:id="@+id/btnFade"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scale"
+        android:onClick="scale"
+        android:id="@+id/btnScale"
+        android:layout_alignTop="@+id/btnFade"
+        android:layout_toRightOf="@+id/btnFade"
+        android:layout_toEndOf="@+id/btnFade" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rotate"
+        android:onClick="rotate"
+        android:id="@+id/btnRotate"
+        android:layout_alignTop="@+id/btnScale"
+        android:layout_toRightOf="@+id/btnScale"
+        android:layout_toEndOf="@+id/btnScale" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Slide"
+        android:onClick="slide"
+        android:id="@+id/btnSlide"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/btnRotate"
+        android:layout_toEndOf="@+id/btnRotate" />
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:id="@+id/ivDroid"
+        android:onClick="viewPropertyAnimator"
+        android:layout_centerInParent="true"
+        android:src="@mipmap/ic_launcher"/>
+  </RelativeLayout>
